// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab render panelHeader 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "width": "100%",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
            "paddingVertical": 15,
          },
          Object {
            "backgroundColor": "#000",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "flex": 2,
              "paddingHorizontal": 12,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            Object {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader with subtitle 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
            "paddingVertical": 15,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 2,
              "paddingHorizontal": 12,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#5E6678",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 18,
                  "lineHeight": 24,
                },
                Array [
                  Object {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            Subtitle
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
            },
            undefined,
          ]
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader with title 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
            "paddingVertical": 15,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 2,
              "paddingHorizontal": 12,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#444B5A",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 24,
                  "lineHeight": 30,
                },
                Array [
                  Object {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            title
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
            },
            undefined,
          ]
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader without props 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      Array [
        "top",
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
            "paddingVertical": 15,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "flex": 2,
              "paddingHorizontal": 12,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-end",
            },
            undefined,
          ]
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;
